# Monsoon-Emulator

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  MEMORY_ARCHITECTURE_DRAFT.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  THREADING_ANALYSIS.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: lint.yml  release.yml  tests.yml  version-check.yml
.run/: Test.run.xml
cli/: CLI_INTERFACE.md  Cargo.toml  README.md
cli/src/cli/: args.rs  config.rs  execution.rs  headless.rs  mod.rs  output.rs  video.rs
core/: Cargo.toml  README.md  build.rs
core/assets/: no-intro-db-alt-names.xml  no-intro-db-headerless.xml  no-intro-db.xml
core/src/: lib.rs  rom_db.rs  trace.rs  util.rs
core/src/emulation/: board.rs  cpu.rs  mod.rs  nes.rs  opcode.rs  palette_util.rs  ppu.rs  ppu_util.rs  savestate.rs  screen_renderer.rs
core/src/emulation/mapper/: mmc1.rs  mod.rs  nametable_mapping.rs
core/src/emulation/mem/: apu_registers.rs  memory_map.rs  mirror_memory.rs  mod.rs  nametable_memory.rs  palette_ram.rs  ppu_registers.rs
core/src/emulation/peripherals/: mod.rs
core/src/emulation/rom/: mod.rs  rom_db.rs
core/src/tests/cpu/: brk_vector.rs  mem.rs  mod.rs  nmi.rs  reset.rs
core/src/tests/nes/: cpu_reset.rs  nestest.rs  oam_read.rs  oam_stress.rs  ppu_open_bus.rs
core/tests/nes-test-roms/: AccuracyCoin.nes
db/: Cargo.toml  README.md
db/src/: db_provider.rs  lib.rs  manifest.rs
docs/: THREADING_ANALYSIS.md
frontend/: Cargo.toml  README.md  index.html
frontend/examples/: threaded_emulator.rs
frontend/src/: channel_emu.rs  emulator_wrapper.rs  lib.rs  messages.rs  threaded_emu.rs
frontend/src/frontend/: egui_frontend.rs  messages.rs  mod.rs  persistence.rs  savestates.rs  storage.rs  util.rs
frontend/src/frontend/egui/: config.rs  input.rs  keybindings.rs  mod.rs  textures.rs  tiles.rs  wgpu_renderer.rs
renderer/: Cargo.toml  README.md
renderer/src/: lib.rs  pixel_renderer.rs
xtask/: Cargo.toml
xtask/assets/: no-intro-db.xml
(+52 files in other folders)
