[package]
name = "monsoon-xtasks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "main"

[dependencies]
quick-xml = "0.39.4"
hex = "0.4"
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
